syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

import "components.proto";

service CameraService {
  rpc CameraId(CameraIdRequest) returns (CameraIdResponse) {}
}

message CameraIdRequest {
  optional string sensor_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message CameraIdResponse {
  optional string camera_id = 1 [(buf.validate.field).required = true];
}


